fix: gitthub bug fixing

--- a/admin/pages/leader_portfoie/governer_list.html
+++ b/admin/pages/leader_portfoie/governer_list.html
@@ -553,7 +553,7 @@
             table_content.style.display = 'block'; // hide the form
             container_div.style.display = "none"
 
-            
+
         })
 
 
@@ -729,11 +729,9 @@
 
 
         window.onload = function () {
-            loadGoverner()
+            loadGoverner();
         }
-
-
-
+       
 
 
 
