--- a/pages/portfolio/profile_ministers.html
+++ b/pages/portfolio/profile_ministers.html
@@ -17,6 +17,8 @@
 
     <link rel="stylesheet" href="../../assets/css/leader_profile.css">
 
+    <link rel="stylesheet" href="../../assets/css/footer.css">
+
 
 </head>
 
@@ -42,12 +44,10 @@
         </div>
 
 
-        <h1 class="cmd">Comment Section</h1>
+        <h1 class="cmd">கருத்துப் பகுதி</h1>
         <ul id="comments-list"></ul>
         <form id="comment-form">
-            <!-- <label for="name">Name:</label>
-            <input type="text" id="name" name="name"><br> -->
-            <label for="comment">Comment:</label>
+            <label for="comment">கருத்து:</label>
             <textarea id="comment" required name="comment"></textarea><br>
             <input type="submit" id="submit_btn" value="Submit">
         </form>
