--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -41,9 +41,7 @@
             background-color: #0062cc;
         }
 
-        @media screen and (max-width:600px) {
-            
-        }
+        @media screen and (max-width:600px) {}
     </style>
 
 </head>
@@ -54,6 +52,7 @@
 
 
     <!-- mla page -->
+    <!-- <div id="google_translate_element"></div> -->
 
 
 
@@ -76,7 +75,44 @@
 
     <button id="sortName">Sort by Name</button>
     <button id="sortMargin">Sort by Margin</button>
+
     <div class="governer">
+
+        <table class="table table-hover">
+
+            <thead id="head_tamil">
+
+                <th class="text-center">வ.எண்</th>
+                <th class="text-center">தொகுதி பெயர்</th>
+                <th class="text-center">வேட்பாளர் பெயர்</th>
+                <th class="text-center">கட்சிகள்</th>
+                <th class="text-center">வாக்குகள்</th>
+                <th class="text-center">வாக்கு வித்தியாசம்</th>
+                <th class="text-center">வாக்கு விகிதம் %</th>
+
+            </thead>
+            <thead id="head_english" style="display: none;">
+
+                <th class="text-center">no</th>
+                <th class="text-center"> contuency name</th>
+                <th class="text-center">candidate name</th>
+                <th class="text-center">party</th>
+                <th class="text-center">votes</th>
+                <th class="text-center">vote margin</th>
+                <th class="text-center">persentage %</th>
+
+            </thead>
+
+            <tbody class="mla_list_body">
+
+
+            </tbody>
+
+        </table>
+
+    </div>
+
+    <!-- <div class="governer">
         <!-- <table class="table table-hover">
 
             <thead>
@@ -3430,8 +3466,8 @@
 
 
         <!-- <span>View</span> Details <button id="first"> Toggle</button> -->
-    </div>
-    <script src="../../assets/javascript/mla_list.js"></script>
+    </div> -->
+   
 
     <a href="mla_profile.html"></a>
     <!-- footer  section-->
@@ -3443,7 +3479,22 @@
 
     <script src="../../main.js"></script>
 
-    <script src="../../assets/javascript/translate.js"></script>
+
+    <script src="../../assets/javascript/mla_list.js"></script>
+
+    <!-- <script src="../../assets/javascript/translate.js"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script> -->
+
+    <!-- <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                // pageLanguage: 'en',
+                includedLanguages: 'en,ta' // remove this line if you want to include all languages
+            }, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 
 </body>
 
