--- a/pages/portfolio/parties-profile.html
+++ b/pages/portfolio/parties-profile.html
@@ -8,6 +8,7 @@
     <link href="../../assets/css/main.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="../../assets/css/responsive.css"> -->
     <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/icons/p logo.jpg">
+    <link rel="stylesheet" href="../../assets/css/footer.css">
    
     <title>minister</title>
 
