fix: eslint updates

--- a/pages/portfolio/portfolio.html
+++ b/pages/portfolio/portfolio.html
@@ -24,18 +24,36 @@
   <!-- navbar all -->
   <div id="search_result"></div>
 
-
-
-
   <!-- portfolio start -->
 
-  <div class="lists1">
+<div class="main_container">
+
+  <!-- <div class="minister_card">
+
+    <div class="minister_image">
+
+      <img src="https://freeimghost.net/images/2023/05/04/m-k-stalin.png" alt="mk-stalin">
+
+    </div>
+
+    <div class="minister_details">
+
+      <div class="details_contents">
+
+        <p class="minister_name">Name</p>
+        <p class="coun_of_minister">council of minister</p>
+        <p class="minister_pos">position</p>
+
+        <p class="view_portfolio"><a href="">View portfolio</a></p>
+
+      </div>
+
+    </div>
+
+  </div> -->
 
 
-  </div>
-  <div class="create">
-
-  </div>
+</div>
 
 
 
